--- a/src/app/components/merit-list/merit-list.component.scss
+++ b/src/app/components/merit-list/merit-list.component.scss
@@ -64,9 +64,9 @@
 }
 
 .total-count {
-  font-weight: 900;
+  font-weight: bold;
   font-size: 1.2rem;
-  color: #2c1602;
+  color: #d50606;
   max-width: 700px;
   padding: 0.7rem;
   border-radius: 12px;
