--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -34,6 +34,9 @@ mat-toolbar {
       background-color: #421b07;
       color: white;
     }
+    .btn-new{
+      border: 1px solid;
+    }
 }
 
 /* Make toolbar and buttons responsive */
