--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -4,9 +4,37 @@
   <span class="spacer"></span>
 
   <nav class="menu">
-    <button class="btn-new" *ngIf="isLoggedIn()" mat-button routerLink="/merits/add">නව</button>
-    <button mat-button routerLink="/merits/other">වෙනත්</button>
-    <button *ngIf="isLoggedIn()" mat-button (click)="logout()">පිටවීම</button>
-    <button *ngIf="!isLoggedIn()" mat-button (click)="login()">ඇතුල්වීම</button>
+    <button
+      class="btn-new"
+      *ngIf="isLoggedIn()"
+      mat-button
+      routerLink="/merits/add"
+    >
+      නව
+    </button>
+    <button
+      *ngIf="isLoggedIn()"
+      class="btn-other"
+      mat-button
+      routerLink="/merits/other"
+    >
+      වෙනත්
+    </button>
+    <button
+      class="btn-logout"
+      *ngIf="isLoggedIn()"
+      mat-button
+      (click)="logout()"
+    >
+      පිටවීම
+    </button>
+    <button
+      class="btn-login"
+      *ngIf="!isLoggedIn()"
+      mat-button
+      (click)="login()"
+    >
+      ඇතුල්වීම
+    </button>
   </nav>
 </mat-toolbar>
