--- a/src/app/components/merit-detail/merit-detail.component.html
+++ b/src/app/components/merit-detail/merit-detail.component.html
@@ -1,7 +1,9 @@
-<div *ngIf="loading">Loading...</div>
+<div *ngIf="loading" class="loading-spinner">
+  <mat-spinner diameter="50"></mat-spinner>
+</div>
 <div *ngIf="error">{{ error }}</div>
 
-<div *ngIf="merit" class="detail-container">
+<div *ngIf="merit && !loading" class="detail-container">
   <!-- Title -->
   <header class="header-row">
     <h2>{{ merit?.title }}</h2>
