--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,7 @@
 </header>
 
 <main>
-  <router-outlet></router-outlet>
+  <span class="main-cont">
+    <router-outlet></router-outlet>
+  </span>
 </main>
