--- a/src/app/components/merit-detail/merit-detail.component.scss
+++ b/src/app/components/merit-detail/merit-detail.component.scss
@@ -1,21 +1,29 @@
+.detail-container,
+.bottom-container {
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.7),
+    rgba(245, 247, 238, 0.7)
+  );
+}
+
 .detail-container {
   max-width: 700px;
   margin: 80px auto;
   padding: 2rem 2.5rem;
-  background-color: #fdfdfd;
-  border-radius: 12px;
+  border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   font-family: Arial, sans-serif;
   color: #333;
 }
 
 .bottom-container {
+  border-radius: 8px;
   text-align: center;
   max-width: 700px;
   font-weight: bold;
   margin: 80px auto;
   padding: 2rem 2.5rem;
-  background-color: #fdfdfd;
   color: #731717;
 }
 /* Header Title */
