--- a/src/app/components/merit-detail/merit-detail.component.html
+++ b/src/app/components/merit-detail/merit-detail.component.html
@@ -53,7 +53,7 @@
     class="video-list"
   >
     <h3 class="sub-title">වීඩියෝ</h3>
-    <div *ngFor="let url of videoUrls" style="margin-bottom: 1rem">
+    <!-- <div *ngFor="let url of videoUrls" style="margin-bottom: 1rem">
       <iframe
         [src]="url"
         width="640"
@@ -61,6 +61,10 @@
         allow="autoplay"
         frameborder="0"
       ></iframe>
+    </div> -->
+
+    <div *ngFor="let url of videoUrls" style="margin-bottom: 1rem">
+      <iframe [src]="url" frameborder="0"></iframe>
     </div>
   </section>
 
