--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -16,7 +16,8 @@ mat-toolbar {
 .logo {
   color: #1a0202;
   font-weight: bold;
-  font-size: 1.9rem;
+  font-size: 3rem;
+  font-family: "Abhaya Libre", serif;
   text-decoration: none;
   transition: text-shadow 0.3s ease, color 0.3s ease;
 }
@@ -32,6 +33,8 @@ mat-toolbar {
 .menu {
   display: flex;
   button {
+    font-family: "Abhaya Libre", serif;
+    font-size: 1em;
     margin-left: 1%;
   }
   button:hover {
@@ -46,11 +49,12 @@ mat-toolbar {
     background-color: #6c757d;
   }
   .btn-login {
+    background-color: #8b2525;
     border: 1px solid;
   }
   .btn-logout {
     border: 1px solid;
-    // background-color: #630401;
+    background-color: #8b2525;
   }
 }
 
@@ -61,7 +65,7 @@ mat-toolbar {
   }
 
   .menu button {
-    font-size: 0.875rem;
+    font-size: 1rem;
     padding: 0 8px;
     background-color: #8b2525;
   }
